tests/lean/protected.lean.expected.out
protected.lean:9:7: error: unknown identifier 'C'
â‡ : ?M_1
D : Prop
